unpackaged/objects/Adam_Bar__c.object
<CustomObject>
    <fields>
        <fullName>Adam_Bar_Picklist__c</fullName>
        <label>Adam Bar Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Check_Control__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                    <default>true</default>
                    <label>3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Control__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Empty_field__c</fullName>
        <label>Empty field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metazoa_Test_Field__c</fullName>
        <label>Metazoa Test Field</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_text_area__c</fullName>
        <label>My text area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <label>Referral Source</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>controller__c</fullName>
        <label>controller</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one</fullName>
                </value>
                <value>
                    <fullName>two</fullName>
                </value>
                <value>
                    <fullName>three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dependent__c</fullName>
        <label>dependent</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>controller__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one_112311</fullName>
                </value>
                <value>
                    <fullName>one_80989</fullName>
                </value>
                <value>
                    <fullName>two_090998</fullName>
                </value>
                <value>
                    <fullName>two_8978789</fullName>
                </value>
                <value>
                    <fullName>two_987878</fullName>
                </value>
                <value>
                    <fullName>three_098909</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dominant__c</fullName>
        <label>dominant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>first</fullName>
                </value>
                <value>
                    <fullName>second</fullName>
                </value>
                <value>
                    <fullName>third</fullName>
                </value>
                <value>
                    <fullName>fourth</fullName>
                </value>
                <value>
                    <fullName>fifth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iscontrolled__c</fullName>
        <label>iscontrolled</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>dominant__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>first_88090989</fullName>
                </value>
                <value>
                    <fullName>first_0980990</fullName>
                </value>
                <value>
                    <fullName>third_0980909890</fullName>
                </value>
                <value>
                    <fullName>fourth_09090808</fullName>
                </value>
                <value>
                    <fullName>fifth_989809890</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>subservient__c</fullName>
        <label>subservient</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>controller__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one_98989</fullName>
                </value>
                <value>
                    <fullName>two_09809890</fullName>
                </value>
                <value>
                    <fullName>three_80980989</fullName>
                </value>
                <value>
                    <fullName>three_9890890</fullName>
                </value>
                <value>
                    <fullName>four_0989090</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Adam Bar</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Adam Bar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adam Bars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>